# synthflow

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml
.github/workflows/: ci.yaml
docs/: conf.py  index.rst
notebooks/: conditional-mean-release.ipynb  dp-linear-regression.ipynb  exploratory-privacy-risk-analysis.ipynb  faithfulness-algos-comparison.ipynb  faithfulness-algos-results.csv  max-ratio-privacy-budget.ipynb  private-selection.ipynb  wandb-analysis-acceptance.ipynb
privbayes/: README.md  makefile
privbayes/code.degree/: main_marginal.cpp  methods.cpp  methods.h
privbayes/code.theta/: main_marginal.cpp  methods.cpp  methods.h  noise.cpp  noise.h
synthflow/: __init__.py  __main__.py  birth.py  release.py  selection.py  utils.py
synthflow/evaluation/: __init__.py  acceptance.py  preperation.py
synthflow/evaluation/faithfulness/: __init__.py  core.py  weights.py
synthflow/evaluation/privacy/: __init__.py  face.py
synthflow/evaluation/utility/: __init__.py  analysis.py  analysis_structures.py  metrics.py
synthflow/generation/: __init__.py  post.py  processing.py
synthflow/generation/models/: __init__.py  privbayes.py
synthflow/reporting/: __init__.py  template.ipynb
tests/: test_acceptance.py  test_evaluation.py  test_face_privacy.py  test_faithfulness.py  test_generation.py  test_main.py  test_privbayes.py  test_processing.py  test_release.py  test_selection.py  test_synthflow.py  test_utility.py  test_utils.py  utils.py
tests/data/: PBNTheta-cpu-6-7-41580-0-2921-3d1a-3b41.json  PBNTheta-cpu-6-7-41580-0-2921-3d1a-f51f.json  birth_2019_nber_us_SINGLETON_SAMPLE10K.csv
